# ankicommunity-sync-server

./: .dockerignore  .env.example  .gitignore  .gitmodules  CERTIFICATE_RENEWAL.md  CLAUDE.md  COGNITO_SETUP.md  COLLECTIONS_MIGRATION.md  DEBUGGING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_FINDINGS.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.nginx  Dockerfile.optimized  Dockerfile.proxy  EFS_PERMISSIONS_SETUP.md  HTTPS_SETUP.md  LightsailDefaultKey-ap-southeast-1.pem  PURGE_USER_README.md  README.md  SUBMODULE_SETUP.md  SYNC_SERVER_SETUP.md  TODO.md  add_email_user.py  ankipi_schema_for_production.sql  challenge_server.py  cleanup_user_data.sh  cognito_setup_guide.md  database_migration  debug_anki_client.py  development_roadmap.txt  docker-compose.cognito.example.yml  docker-compose.cognito.yml  docker-compose.latest.yml  docker-compose.nginx.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  efs101.md  (+24 more)
certs/: jack.bwv988.com.key  localhost+3.pem  server.crt  server.key
db_migration/: MIGRATION_README.md  create_schema.sql  migrate.sh  rollback_migration.sql  test_migration.sh  verify_migration.sh
letsencrypt/: cli.ini
nginx/: ankipi-web.conf  nginx.conf  server.conf.template  sync.ankipi.com.conf
scripts/: README.md  cleanup-nfs-locks.sh  docker-deploy.sh  generate-nginx-config.sh  renew-certs.sh  reset_user.sh  reset_user_collection.py  reset_user_media.py  setup-https-certs.sh  setup-nginx-ssl.sh
scripts.backup/: aws-deploy.sh  docker-dev.sh
src/: ankisyncd-cognito.conf  ankisyncd.conf  ankisyncd.conf.backup  https_proxy.py  (+3 more)
(+39 files in other folders)
