[tool.poetry]
name = "anki-sync-server"
version = "2.4.0"
description = "Self-hosted Anki Sync Server."
authors = ["Vikash Kothary <kothary.vikash@gmail.com>"]
packages = [
	{ include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
anki = "^24.4"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
markdown = "^3.2.2"
send2trash = "^1.5.0"
decorator = "^4.4.2"
psutil = "^5.7.2"
distro = "^1.5.0"
webob = "^1.8.6"
protobuf = "^4.21"
boto3 = "^1.26.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
jupyter = "^1.0.0"
jupyterlab = "^2.2.2"
webtest = "^2.0.35"
mkdocs-jupyter = "^0.19.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
